Further non-unified build fixes https://bugs.webkit.org/show_bug.cgi?id=212195

Reviewed by Adrian Perez de Castro.

* bytecode/InstanceOfStatus.cpp:
* heap/MarkedSpace.cpp:
* runtime/ObjectInitializationScope.cpp:
* runtime/ThrowScope.cpp:


Canonical link: https://commits.webkit.org/225065@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@261993 268f45cc-cd09-0410-ab3c-d52691b4dbfc