Source/JavaScriptCore/bytecode/InstanceOfStatus.cpp
@@ -28,6 +28,7 @@
 
 #include "ICStatusUtils.h"
 #include "InstanceOfAccessCase.h"
+#include "JSCellInlines.h"
 #include "PolymorphicAccess.h"
 #include "StructureStubInfo.h"
 
