Source/JavaScriptCore/runtime/ThrowScope.cpp
@@ -27,6 +27,7 @@
 #include "ThrowScope.h"
 
 #include "Exception.h"
+#include "JSCJSValueInlines.h"
 #include "VM.h"
 
 namespace JSC {
